force-app/main/default/objects/Customer_Contact_Report__c/Customer_Contact_Report__c.object-meta.xml
<CustomObject>
    <description>Used to record details of a customer visit</description>
    <label>Customer Contact Report</label>
    <nameField>
        <displayFormat>CVR-{000000}</displayFormat>
        <label>Customer Contact Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Contact Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>