force-app/main/default/objects/Customer_Contact_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The account the visit report belongs to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Visit_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>