force-app/main/default/objects/Customer_Contact_Report__c/fields/Action_Points__c.field-meta.xml
<CustomField>
    <fullName>Action_Points__c</fullName>
    <description>Action points from the meeting</description>
    <label>Action Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>