force-app/main/default/objects/Customer_Contact_Report__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <description>Meeting agenda</description>
    <label>Agenda</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>