force-app/main/default/objects/Customer_Contact_Report__c/fields/AOB__c.field-meta.xml
<CustomField>
    <fullName>AOB__c</fullName>
    <description>Any other business</description>
    <label>AOB</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>