force-app/main/default/objects/Customer_Contact_Report__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <description>List of attendees at the meeting.  Not using a lookup to Contacts as some attendees will not be in the system.  As agreed with Jacqueline.</description>
    <label>Attendees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>