force-app/main/default/objects/Customer_Contact_Report__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Poder seleccionar contacto, en caso que esté creado</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Contact Reports</relationshipLabel>
    <relationshipName>Customer_Contact_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>