force-app/main/default/objects/Customer_Contact_Report__c/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <description>The date and time of the meeting</description>
    <inlineHelpText>The date and time of the meeting</inlineHelpText>
    <label>Date and Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>