force-app/main/default/objects/Customer_Contact_Report__c/fields/Items_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Items_Discussed__c</fullName>
    <description>Items discussed and meeting notes</description>
    <label>Items Discussed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>