force-app/main/default/objects/Customer_Contact_Report__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of the meeting</description>
    <inlineHelpText>Location of the meeting</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>