force-app/main/default/objects/Customer_Contact_Report__c/fields/Meeting_Subject__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Subject__c</fullName>
    <label>Meeting Subject</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>