force-app/main/default/objects/Customer_Contact_Report__c/fields/Purpose_of_the_visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_the_visit__c</fullName>
    <label>Purpose of the visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEGOCIACIÓN PRECIOS</fullName>
                <default>true</default>
                <label>NEGOCIACIÓN PRECIOS</label>
            </value>
            <value>
                <fullName>REVISIÓN RAPPELES</fullName>
            </value>
            <value>
                <fullName>PRESENTACION MODELOS NUEVOS</fullName>
            </value>
            <value>
                <fullName>CALIDAD</fullName>
            </value>
            <value>
                <fullName>RIESGOS</fullName>
            </value>
            <value>
                <fullName>OTROS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>