force-app/main/default/objects/Customer_Contact_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Purpose_of_the_visit__c</columns>
    <columns>Meeting_Subject__c</columns>
    <columns>Action_Points__c</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Attendees__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>